syntax = "proto3";
import "google/protobuf/timestamp.proto";
package leaderboardstat;

option go_package = "protobuf/golang/leaderboardstat";

message ContributorStatResponse {
  uint64 contributor_id = 1;
  uint64 global_rank = 2;
  double total_score = 3;
  map<uint64, double> projects_score = 4;
  map<uint64, ProjectScoreHistory> score_history = 5;
}

message ProjectScoreHistory {
  repeated ScoreEntry entries = 1;
}

message ScoreEntry {
  string activity = 1;
  double score = 2;
  google.protobuf.Timestamp earned_at = 3;
}

message ContributorStatRequest{
  uint64 contributor_id = 1;
}

service LeaderboardStatService{
  rpc GetContributorStats(ContributorStatRequest) returns (ContributorStatResponse);
}